--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -224,6 +224,32 @@
  CZE_radical_nationalism:0 "Kingdom of Bohemia"
  CZE_radical_nationalism_ADJ:0 "Czechoslovakian "
  CZE_radical_nationalism_DEF:0 "The Kingdom of Bohemia"
+
+  
+ DEN_communism:0 "People's Republic of Denmark"
+ DEN_communism_ADJ:0 "Danish "
+ DEN_communism_DEF:0 "The People's Republic of Denmark"
+ DEN_radical_socialism:0 "People's Republic of Denmark"
+ DEN_radical_socialism_ADJ:0 "Danish "
+ DEN_radical_socialism_DEF:0 "The People's Republic of Denmark"
+ DEN_social_democratic:0 "People's Republic of Denmark"
+ DEN_social_democratic_ADJ:0 "Danish "
+ DEN_social_democratic_DEF:0 "The People's Republic of Denmark"
+ DEN_market_liberalism:0 "Kingdom of Denmark"
+ DEN_market_liberalism_ADJ:0 "Danish "
+ DEN_market_liberalism_DEF:0 "The Kingdom of Denmark"
+ DEN_social_conservatism:0 "Kingdom of Denmark"
+ DEN_social_conservatism_ADJ:0 "Danish "
+ DEN_social_conservatism_DEF:0 "The Kingdom of Denmark"
+ DEN_authoritarian_government:0 "Kingdom of Denmark"
+ DEN_authoritarian_government_ADJ:0 "Danish "
+ DEN_authoritarian_government_DEF:0 "The Kingdom of Denmark"
+ DEN_paternal_autocrat:0 "Kingdom of Denmark"
+ DEN_paternal_autocrat_ADJ:0 "Danish "
+ DEN_paternal_autocrat_DEF:0 "The Kingdom of Denmark"
+ DEN_radical_nationalism:0 "Kingdom of Denmark"
+ DEN_radical_nationalism_ADJ:0 "Danish "
+ DEN_radical_nationalism_DEF:0 "The Kingdom of Denmark" 
  
  ENG_communism:0 "Union of Britain"
  ENG_communism_ADJ:0 "British "
@@ -249,6 +275,31 @@
  ENG_radical_nationalism:0 "British Empire"
  ENG_radical_nationalism_ADJ:0 "British "
  ENG_radical_nationalism_DEF:0 "The British Empire"
+
+ FIN_communism:0 "Finland"
+ FIN_communism_ADJ:0 "Finnish "
+ FIN_communism_DEF:0 "Finland"
+ FIN_radical_socialism:0 "Finland"
+ FIN_radical_socialism_ADJ:0 "Finnish "
+ FIN_radical_socialism_DEF:0 "Finland"
+ FIN_social_democratic:0 "Finland"
+ FIN_social_democratic_ADJ:0 "Finnish "
+ FIN_social_democratic_DEF:0 "Finland"
+ FIN_market_liberalism:0 "Finland"
+ FIN_market_liberalism_ADJ:0 "Finnish "
+ FIN_market_liberalism_DEF:0 "Finland"
+ FIN_social_conservatism:0 "Finland"
+ FIN_social_conservatism_ADJ:0 "Finnish "
+ FIN_social_conservatism_DEF:0 "Finland"
+ FIN_authoritarian_government:0 "Finland"
+ FIN_authoritarian_government_ADJ:0 "Finnish "
+ FIN_authoritarian_government_DEF:0 "Finland"
+ FIN_paternal_autocrat:0 "Finland"
+ FIN_paternal_autocrat_ADJ:0 "Finnish "
+ FIN_paternal_autocrat_DEF:0 "Finland"
+ FIN_radical_nationalism:0 "Finland"
+ FIN_radical_nationalism_ADJ:0 "Finnish "
+ FIN_radical_nationalism_DEF:0 "Finland" 
  
  FRA_communism:0 "French Commune"
  FRA_communism_ADJ:0 "French "
@@ -401,30 +452,30 @@
  ITA_radical_nationalism_ADJ:0 "Italian "
  ITA_radical_nationalism_DEF:0 "The Kingdom of Italy"
  
- ITA_communism:0 "Japanese People's Republic"
- ITA_communism_ADJ:0 "Japanese "
- ITA_communism_DEF:0 "The Japanese People's Republic"
- ITA_radical_socialism:0 "Japanese People's Republic"
- ITA_radical_socialism_ADJ:0 "Japanese "
- ITA_radical_socialism_DEF:0 "The Japanese People's Republic"
- ITA_social_democratic:0 "State of Japan"
- ITA_social_democratic_ADJ:0 "Japanese "
- ITA_social_democratic_DEF:0 "The State of Japan"
- ITA_market_liberalism:0 "State of Japan"
- ITA_market_liberalism_ADJ:0 "Japanese "
- ITA_market_liberalism_DEF:0 "The State of Japan"
- ITA_social_conservatism:0 "State of Japan"
- ITA_social_conservatism_ADJ:0 "Japanese "
- ITA_social_conservatism_DEF:0 "The State of Japan"
- ITA_authoritarian_government:0 "Imperial Japan"
- ITA_authoritarian_government_ADJ:0 "Japanese "
- ITA_authoritarian_government_DEF:0 "Imperial Japan"
- ITA_paternal_autocrat:0 "Imperial Japan"
- ITA_paternal_autocrat_ADJ:0 "Japanese "
- ITA_paternal_autocrat_DEF:0 "Imperial Japan"
- ITA_radical_nationalism:0 "Imperial Japan"
- ITA_radical_nationalism_ADJ:0 "Japanese "
- ITA_radical_nationalism_DEF:0 "Imperial Japan"
+ JAP_communism:0 "Japanese People's Republic"
+ JAP_communism_ADJ:0 "Japanese "
+ JAP_communism_DEF:0 "The Japanese People's Republic"
+ JAP_radical_socialism:0 "Japanese People's Republic"
+ JAP_radical_socialism_ADJ:0 "Japanese "
+ JAP_radical_socialism_DEF:0 "The Japanese People's Republic"
+ JAP_social_democratic:0 "State of Japan"
+ JAP_social_democratic_ADJ:0 "Japanese "
+ JAP_social_democratic_DEF:0 "The State of Japan"
+ JAP_market_liberalism:0 "State of Japan"
+ JAP_market_liberalism_ADJ:0 "Japanese "
+ JAP_market_liberalism_DEF:0 "The State of Japan"
+ JAP_social_conservatism:0 "State of Japan"
+ JAP_social_conservatism_ADJ:0 "Japanese "
+ JAP_social_conservatism_DEF:0 "The State of Japan"
+ JAP_authoritarian_government:0 "Imperial Japan"
+ JAP_authoritarian_government_ADJ:0 "Japanese "
+ JAP_authoritarian_government_DEF:0 "Imperial Japan"
+ JAP_paternal_autocrat:0 "Imperial Japan"
+ JAP_paternal_autocrat_ADJ:0 "Japanese "
+ JAP_paternal_autocrat_DEF:0 "Imperial Japan"
+ JAP_radical_nationalism:0 "Imperial Japan"
+ JAP_radical_nationalism_ADJ:0 "Japanese "
+ JAP_radical_nationalism_DEF:0 "Imperial Japan"
  
  MAL_communism:0 "Malaysian Socialist Republic"
  MAL_communism_ADJ:0 "Malaysian "
@@ -476,6 +527,31 @@
  MEX_radical_nationalism_ADJ:0 "Mexican "
  MEX_radical_nationalism_DEF:0 "The Empire of Mexico"
 
+ NOR_communism:0 "Norway"
+ NOR_communism_ADJ:0 "Norwegian "
+ NOR_communism_DEF:0 "Norway"
+ NOR_radical_socialism:0 "Norway"
+ NOR_radical_socialism_ADJ:0 "Norwegian "
+ NOR_radical_socialism_DEF:0 "Norway"
+ NOR_social_democratic:0 "Norway"
+ NOR_social_democratic_ADJ:0 "Norwegian "
+ NOR_social_democratic_DEF:0 "Norway"
+ NOR_market_liberalism:0 "Norway"
+ NOR_market_liberalism_ADJ:0 "Norwegian "
+ NOR_market_liberalism_DEF:0 "Norway"
+ NOR_social_conservatism:0 "Norway"
+ NOR_social_conservatism_ADJ:0 "Norwegian "
+ NOR_social_conservatism_DEF:0 "Norway"
+ NOR_authoritarian_government:0 "Norway"
+ NOR_authoritarian_government_ADJ:0 "Norwegian "
+ NOR_authoritarian_government_DEF:0 "Norway"
+ NOR_paternal_autocrat:0 "Norway"
+ NOR_paternal_autocrat_ADJ:0 "Norwegian "
+ NOR_paternal_autocrat_DEF:0 "Norway"
+ NOR_radical_nationalism:0 "Norway"
+ NOR_radical_nationalism_ADJ:0 "Norwegian "
+ NOR_radical_nationalism_DEF:0 "Norway"
+ 
  ROM_communism:0 "Romanian People's Republic"
  ROM_communism_ADJ:0 "Romanian "
  ROM_communism_DEF:0 "The Romanian People's Republic"
@@ -576,6 +652,31 @@
  SAF_radical_nationalism_ADJ:0 "South African "
  SAF_radical_nationalism_DEF:0 "The Nationalist South Africa"
  
+ SCA_communism:0 "Scandinavian Worker's Union"
+ SCA_communism_ADJ:0 "Scandinavian "
+ SCA_communism_DEF:0 "The Scandinavian Worker's Union"
+ SCA_radical_socialism:0 "Scandinavian Worker's Union"
+ SCA_radical_socialism_ADJ:0 "Scandinavian "
+ SCA_radical_socialism_DEF:0 "The Scandinavian Worker's Union"
+ SCA_social_democratic:0 "United Kingdom of Scandinavia"
+ SCA_social_democratic_ADJ:0 "Scandinavian "
+ SCA_social_democratic_DEF:0 "The United Kingdom of Scandinavia"
+ SCA_market_liberalism:0 "United Kingdom of Scandinavia"
+ SCA_market_liberalism_ADJ:0 "Scandinavian "
+ SCA_market_liberalism_DEF:0 "The United Kingdom of Scandinavia"
+ SCA_social_conservatism:0 "United Kingdom of Scandinavia"
+ SCA_social_conservatism_ADJ:0 "Scandinavian "
+ SCA_social_conservatism_DEF:0 "The United Kingdom of Scandinavia"
+ SCA_authoritarian_government:0 "United Kingdom of Scandinavia"
+ SCA_authoritarian_government_ADJ:0 "Scandinavian "
+ SCA_authoritarian_government_DEF:0 "The United Kingdom of Scandinavia"
+ SCA_paternal_autocrat:0 "Scandinavian Empire"
+ SCA_paternal_autocrat_ADJ:0 "Scandinavian "
+ SCA_paternal_autocrat_DEF:0 "The Scandinavian Empire"
+ SCA_radical_nationalism:0 "Scandinavian Empire"
+ SCA_radical_nationalism_ADJ:0 "Scandinavian "
+ SCA_radical_nationalism_DEF:0 "The Scandinavian Empire"
+ 
  SER_communism:0 "Socialist Republic of Serbia"
  SER_communism_ADJ:0 "Serbian "
  SER_communism_DEF:0 "The Socialist Republic of Serbia"
@@ -650,31 +751,95 @@
  SPR_radical_nationalism:0 "Spanish Empire"
  SPR_radical_nationalism_ADJ:0 "Spanish "
  SPR_radical_nationalism_DEF:0 "The Spanish Empire"
+
+ SWE_communism:0 "Sweden"
+ SWE_communism_ADJ:0 "Swedish "
+ SWE_communism_DEF:0 "Sweden"
+ SWE_radical_socialism:0 "Sweden"
+ SWE_radical_socialism_ADJ:0 "Swedish "
+ SWE_radical_socialism_DEF:0 "Sweden"
+ SWE_social_democratic:0 "Sweden"
+ SWE_social_democratic_ADJ:0 "Swedish "
+ SWE_social_democratic_DEF:0 "Sweden"
+ SWE_market_liberalism:0 "Sweden"
+ SWE_market_liberalism_ADJ:0 "Swedish "
+ SWE_market_liberalism_DEF:0 "Sweden"
+ SWE_social_conservatism:0 "Sweden"
+ SWE_social_conservatism_ADJ:0 "Swedish "
+ SWE_social_conservatism_DEF:0 "Sweden"
+ SWE_authoritarian_government:0 "Sweden"
+ SWE_authoritarian_government_ADJ:0 "Swedish "
+ SWE_authoritarian_government_DEF:0 "Sweden"
+ SWE_paternal_autocrat:0 "Sweden"
+ SWE_paternal_autocrat_ADJ:0 "Swedish "
+ SWE_paternal_autocrat_DEF:0 "Sweden"
+ SWE_radical_nationalism:0 "Sweden"
+ SWE_radical_nationalism_ADJ:0 "Swedish "
+ SWE_radical_nationalism_DEF:0 "Sweden"
+ 
  
  POL_communism:0 "Polish People's Republic"
- POL_communism_ADJ:0 "Polish" "
+ POL_communism_ADJ:0 "Polish "
  POL_communism_DEF:0 "The Polish People's Republic"
  POL_radical_socialism:0 "Polish People's Republic"
- POL_radical_socialism_ADJ:0 "Polish" "
+ POL_radical_socialism_ADJ:0 "Polish "
  POL_radical_socialism_DEF:0 "The Polish People's Republic"
  POL_social_democratic:0 "Polish Republic"
- POL_social_democratic_ADJ:0 "Polish" "
+ POL_social_democratic_ADJ:0 "Polish "
  POL_social_democratic_DEF:0 "The Polish Republic"
  POL_market_liberalism:0 "Polish Republic"
- POL_market_liberalism_ADJ:0 "Polish" "
+ POL_market_liberalism_ADJ:0 "Polish "
  POL_market_liberalism_DEF:0 "The Polish Republic"
  POL_social_conservatism:0 "Polish Republic"
- POL_social_conservatism_ADJ:0 "Polish" "
+ POL_social_conservatism_ADJ:0 "Polish "
  POL_social_conservatism_DEF:0 "The Polish Republic"
  POL_authoritarian_government:0 "Polish Republic"
- POL_authoritarian_government_ADJ:0 "Polish" "
+ POL_authoritarian_government_ADJ:0 "Polish "
  POL_authoritarian_government_DEF:0 "The Polish Republic"
  POL_paternal_autocrat:0 "Polish Republic"
- POL_paternal_autocrat_ADJ:0 "Polish" "
+ POL_paternal_autocrat_ADJ:0 "Polish "
  POL_paternal_autocrat_DEF:0 "The Polish Republic"
  POL_radical_nationalism:0 "Falangist Poland"
- POL_radical_nationalism_ADJ:0 "Polish" "
+ POL_radical_nationalism_ADJ:0 "Polish "
  POL_radical_nationalism_DEF:0 "Falangist Poland"
+ 
+ POR_fascism:0 "Greater Portugal"
+ POR_fascism_DEF:0 "Greater Portugal"
+ POR_democratic:0 "Portuguese Republic"
+ POR_democratic_DEF:0 "The Portuguese Republic"
+ POR_neutrality:0 "Portugal"
+ POR_neutrality_DEF:0 "Portugal"
+ POR_communism:0 "Maximalist Portugal"
+ POR_communism_DEF:0 "Maximalist Portugal"
+ POR_fascism_ADJ:0 "Portuguese"
+ POR_democratic_ADJ:0 "Portuguese"
+ POR_neutrality_ADJ:0 "Portuguese"
+ POR_communism_ADJ:0 "Portuguese
+ 
+ POR_communism:0 "Portugese Union of Workers and Farmers"
+ POR_communism_ADJ:0 "Portuguese "
+ POR_communism_DEF:0 "The Portugese Union of Workers and Farmers"
+ POR_radical_socialism:0 "Portugese Union of Workers and Farmers"
+ POR_radical_socialism_ADJ:0 "Portuguese "
+ POR_radical_socialism_DEF:0 "The Portugese Union of Workers and Farmers"
+ POR_social_democratic:0 "Portugese Union of Workers and Farmers"
+ POR_social_democratic_ADJ:0 "Portuguese "
+ POR_social_democratic_DEF:0 "The Portugese Union of Workers and Farmers"
+ POR_market_liberalism:0 "Portuguese Republic"
+ POR_market_liberalism_ADJ:0 "Portuguese "
+ POR_market_liberalism_DEF:0 "The Portuguese Republic"
+ POR_social_conservatism:0 "Portuguese Republic"
+ POR_social_conservatism_ADJ:0 "Portuguese "
+ POR_social_conservatism_DEF:0 "The Portuguese Republic"
+ POR_authoritarian_government:0 "Portuguese Republic"
+ POR_authoritarian_government_ADJ:0 "Portuguese "
+ POR_authoritarian_government_DEF:0 "The Portuguese Republic"
+ POR_paternal_autocrat:0 "Portuguese Empire"
+ POR_paternal_autocrat_ADJ:0 "Portuguese "
+ POR_paternal_autocrat_DEF:0 "The Portuguese Empire"
+ POR_radical_nationalism:0 "Portuguese Empire"
+ POR_radical_nationalism_ADJ:0 "Portuguese "
+ POR_radical_nationalism_DEF:0 "The Portuguese Empire"
  
  UNI_communism:0 "United Socialist Provinces"
  UNI_communism_ADJ:0 "Flemish "
@@ -725,20 +890,12 @@
  USA_radical_nationalism:0 "Independent North America"
  USA_radical_nationalism_ADJ:0 "American "
  USA_radical_nationalism_DEF:0 "The Independent North America" 
- 
- SWE_fascism:0 "Svea Rike"
- SWE_fascism_DEF:0 "Svea Rike"
- SWE_democratic:0 "Sweden"
- SWE_democratic_DEF:0 "Sweden"
- SWE_neutrality:0 "Kingdom of Sweden"
- SWE_neutrality_DEF:0 "The Kingdom of Sweden"
- SWE_communism:0 "Folkhemmet"
- SWE_communism_DEF:0 "Folkhemmet"
- SWE_fascism_ADJ:0 "Swedish"
- SWE_democratic_ADJ:0 "Swedish"
- SWE_neutrality_ADJ:0 "Swedish"
- SWE_communism_ADJ:0 "Swedish"
 
+ 
+ 
+ 
+ 
+ 
  LUX_fascism:0 "Luxembourg"
  LUX_fascism_DEF:0 "Luxembourg"
  LUX_democratic:0 "Luxembourg"
@@ -861,55 +1018,6 @@
  ALB_democratic_ADJ:0 "Albanian"
  ALB_neutrality_ADJ:0 "Albanian"
  ALB_communism_ADJ:0 "Albanian"
- NOR_fascism:0 "Norgesveldet"
- NOR_fascism_DEF:0 "Norgesveldet"
- NOR_democratic:0 "Norway"
- NOR_democratic_DEF:0 "Norway"
- NOR_neutrality:0 "Kingdom of Norway"
- NOR_neutrality_DEF:0 "The Kingdom of Norway"
- NOR_communism:0 "Soviet State of Norway"
- NOR_communism_DEF:0 "The Soviet State of Norway"
- NOR_fascism_ADJ:0 "Norwegian"
- NOR_democratic_ADJ:0 "Norwegian"
- NOR_neutrality_ADJ:0 "Norwegian"
- NOR_communism_ADJ:0 "Norwegian"
- DEN_fascism:0 "North Sea Empire"
- DEN_fascism_DEF:0 "The North Sea Empire"
- DEN_democratic:0 "Denmark"
- DEN_democratic_DEF:0 "Denmark"
- DEN_neutrality:0 "Kingdom of Denmark"
- DEN_neutrality_DEF:0 "The Kingdom of Denmark"
- DEN_communism:0 "Danish Civil Union"
- DEN_communism_DEF:0 "The Danish Civil Union"
- DEN_fascism_ADJ:0 "Danish"
- DEN_democratic_ADJ:0 "Danish"
- DEN_neutrality_ADJ:0 "Danish"
- DEN_communism_ADJ:0 "Danish"
-
- POR_fascism:0 "Greater Portugal"
- POR_fascism_DEF:0 "Greater Portugal"
- POR_democratic:0 "Portuguese Republic"
- POR_democratic_DEF:0 "The Portuguese Republic"
- POR_neutrality:0 "Portugal"
- POR_neutrality_DEF:0 "Portugal"
- POR_communism:0 "Maximalist Portugal"
- POR_communism_DEF:0 "Maximalist Portugal"
- POR_fascism_ADJ:0 "Portuguese"
- POR_democratic_ADJ:0 "Portuguese"
- POR_neutrality_ADJ:0 "Portuguese"
- POR_communism_ADJ:0 "Portuguese"
- FIN_fascism:0 "Greater Finland"
- FIN_fascism_DEF:0 "Greater Finland"
- FIN_democratic:1 "Republic of Finland"
- FIN_democratic_DEF:1 "The Republic of Finland"
- FIN_neutrality:1 "Finland"
- FIN_neutrality_DEF:1 "Finland"
- FIN_communism:0 "Red Finland"
- FIN_communism_DEF:0 "Red Finland"
- FIN_fascism_ADJ:0 "Finnish"
- FIN_democratic_ADJ:0 "Finnish"
- FIN_neutrality_ADJ:0 "Finnish"
- FIN_communism_ADJ:0 "Finnish"
 
 
  AFG_fascism:0 "New Afghan Khanate"
