Europe kind of set up

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -778,6 +778,31 @@
  SWE_radical_nationalism_DEF:0 "Sweden"
  
  
+ SWI_communism:0 "Socialist United Cantons"
+ SWI_communism_ADJ:0 "Swiss "
+ SWI_communism_DEF:0 "The Socialist United Cantons"
+ SWI_radical_socialism:0 "Socialist United Cantons"
+ SWI_radical_socialism_ADJ:0 "Swiss "
+ SWI_radical_socialism_DEF:0 "The Socialist United Cantons"
+ SWI_social_democratic:0 "Socialist United Cantons"
+ SWI_social_democratic_ADJ:0 "Swiss "
+ SWI_social_democratic_DEF:0 "The Socialist United Cantons"
+ SWI_market_liberalism:0 "Switzerland"
+ SWI_market_liberalism_ADJ:0 "Swiss "
+ SWI_market_liberalism_DEF:0 "Switzerland"
+ SWI_social_conservatism:0 "Switzerland"
+ SWI_social_conservatism_ADJ:0 "Swiss "
+ SWI_social_conservatism_DEF:0 "Switzerland"
+ SWI_authoritarian_government:0 "The Swiss Interim Military Government"
+ SWI_authoritarian_government_ADJ:0 "Swiss "
+ SWI_authoritarian_government_DEF:0 "The Swiss Interim Military Government"
+ SWI_paternal_autocrat:0 "Swiss Imperial Confederation"
+ SWI_paternal_autocrat_ADJ:0 "Swiss "
+ SWI_paternal_autocrat_DEF:0 "The Swiss Imperial Confederation"
+ SWI_radical_nationalism:0 "Swiss Imperial Confederation"
+ SWI_radical_nationalism_ADJ:0 "Swiss "
+ SWI_radical_nationalism_DEF:0 "The Swiss Imperial Confederation"
+ 
  POL_communism:0 "Polish People's Republic"
  POL_communism_ADJ:0 "Polish "
  POL_communism_DEF:0 "The Polish People's Republic"
@@ -802,20 +827,7 @@
  POL_radical_nationalism:0 "Falangist Poland"
  POL_radical_nationalism_ADJ:0 "Polish "
  POL_radical_nationalism_DEF:0 "Falangist Poland"
- 
- POR_fascism:0 "Greater Portugal"
- POR_fascism_DEF:0 "Greater Portugal"
- POR_democratic:0 "Portuguese Republic"
- POR_democratic_DEF:0 "The Portuguese Republic"
- POR_neutrality:0 "Portugal"
- POR_neutrality_DEF:0 "Portugal"
- POR_communism:0 "Maximalist Portugal"
- POR_communism_DEF:0 "Maximalist Portugal"
- POR_fascism_ADJ:0 "Portuguese"
- POR_democratic_ADJ:0 "Portuguese"
- POR_neutrality_ADJ:0 "Portuguese"
- POR_communism_ADJ:0 "Portuguese
- 
+  
  POR_communism:0 "Portugese Union of Workers and Farmers"
  POR_communism_ADJ:0 "Portuguese "
  POR_communism_DEF:0 "The Portugese Union of Workers and Farmers"
@@ -982,18 +994,7 @@
  YUG_democratic_ADJ:0 "Yugoslavian"
  YUG_neutrality_ADJ:0 "Yugoslavian"
  YUG_communism_ADJ:0 "Yugoslavian"
- SWI_fascism:0 "Swiss Imperial Confederation"
- SWI_fascism_DEF:0 "The Swiss Imperial Confederation"
- SWI_democratic:0 "Switzerland"
- SWI_democratic_DEF:0 "Switzerland"
- SWI_neutrality:0 "Switzerland"
- SWI_neutrality_DEF:0 "Switzerland"
- SWI_communism:0 "United Cantons"
- SWI_communism_DEF:0 "The United Cantons"
- SWI_fascism_ADJ:0 "Swiss"
- SWI_democratic_ADJ:0 "Swiss"
- SWI_neutrality_ADJ:0 "Swiss"
- SWI_communism_ADJ:0 "Swiss"
+
  TUR_fascism:0 "Neo-Ottoman Empire"
  TUR_fascism_DEF:0 "The Neo-Ottoman Empire"
  TUR_democratic:0 "Republic of Turkey"
