--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -554,7 +554,7 @@
  STATE_553:0 "Lebanon"
  STATE_554:0 "Damascus"
  STATE_555:0 "Kuril Islands"
- STATE_556:0 "French West Africa"
+ STATE_556:1 "British West Africa"
  STATE_557:0 "Mauritania"
  STATE_558:0 "Nigeria"
  STATE_559:0 "Somaliland"
