--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -665,6 +665,61 @@
  POR_radical_nationalism_party:0 "RNP"
  POR_radical_nationalism_party_long:0 "Radical Nationalist Party"  
  
+ #British Egypt
+ BEG_communism_party:0 "CP"
+ BEG_communism_party_long:0 "Communist Party"
+ BEG_radical_socialism_party:0 "RSP"
+ BEG_radical_socialism_party_long:0 "Radical Socialist Party"
+ BEG_social_democratic_party:0 "SDP"
+ BEG_social_democratic_party_long:0 "Social Democratic Party"
+ BEG_market_liberalism_party:0 "MLP"
+ BEG_market_liberalism_party_long:0 "Market Liberal Party"
+ BEG_social_conservatism_party:0 "SCP"
+ BEG_social_conservatism_party_long:0 "Social Conservative Party"
+ BEG_authoritarian_government_party:0 "CG"
+ BEG_authoritarian_government_party_long:0 "Colonial Government"
+ BEG_paternal_autocrat_party:0 "PAP"
+ BEG_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ BEG_radical_nationalism_party:0 "RNP"
+ BEG_radical_nationalism_party_long:0 "Radical Nationalist Party" 
+ 
+ #British Central Africa
+ BCA_communism_party:0 "CP"
+ BCA_communism_party_long:0 "Communist Party"
+ BCA_radical_socialism_party:0 "RSP"
+ BCA_radical_socialism_party_long:0 "Radical Socialist Party"
+ BCA_social_democratic_party:0 "SDP"
+ BCA_social_democratic_party_long:0 "Social Democratic Party"
+ BCA_market_liberalism_party:0 "MLP"
+ BCA_market_liberalism_party_long:0 "Market Liberal Party"
+ BCA_social_conservatism_party:0 "SCP"
+ BCA_social_conservatism_party_long:0 "Social Conservative Party"
+ BCA_authoritarian_government_party:0 "CG"
+ BCA_authoritarian_government_party_long:0 "Colonial Government"
+ BCA_paternal_autocrat_party:0 "PAP"
+ BCA_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ BCA_radical_nationalism_party:0 "RNP"
+ BCA_radical_nationalism_party_long:0 "Radical Nationalist Party" 
+
+ #British West Africa
+ BWA_communism_party:0 "CP"
+ BWA_communism_party_long:0 "Communist Party"
+ BWA_radical_socialism_party:0 "RSP"
+ BWA_radical_socialism_party_long:0 "Radical Socialist Party"
+ BWA_social_democratic_party:0 "SDP"
+ BWA_social_democratic_party_long:0 "Social Democratic Party"
+ BWA_market_liberalism_party:0 "MLP"
+ BWA_market_liberalism_party_long:0 "Market Liberal Party"
+ BWA_social_conservatism_party:0 "SCP"
+ BWA_social_conservatism_party_long:0 "Social Conservative Party"
+ BWA_authoritarian_government_party:0 "CG"
+ BWA_authoritarian_government_party_long:0 "Colonial Government"
+ BWA_paternal_autocrat_party:0 "PAP"
+ BWA_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ BWA_radical_nationalism_party:0 "RNP"
+ BWA_radical_nationalism_party_long:0 "Radical Nationalist Party"  
+ 
+ 
  CHI_communism_party:0 "CPC"
  CHI_communism_party_long:0 "Communist Party of China"
  CHI_democratic_party:0 "China Democratic League"
