--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -100,6 +100,56 @@
  BAM_radical_nationalism_ADJ:0 "Arabic "
  BAM_radical_nationalism_DEF:0 "The Greater Arabia"
  
+ BCA_communism:0 "British Central Africa"
+ BCA_communism_ADJ:0 "British Central African "
+ BCA_communism_DEF:0 "British Central Africa"
+ BCA_radical_socialism:0 "British Central Africa"
+ BCA_radical_socialism_ADJ:0 "British Central African "
+ BCA_radical_socialism_DEF:0 "British Central Africa"
+ BCA_social_democratic:0 "British Central Africa"
+ BCA_social_democratic_ADJ:0 "British Central African "
+ BCA_social_democratic_DEF:0 "British Central Africa"
+ BCA_market_liberalism:0 "British Central Africa"
+ BCA_market_liberalism_ADJ:0 "British Central African "
+ BCA_market_liberalism_DEF:0 "British Central Africa"
+ BCA_social_conservatism:0 "British Central Africa"
+ BCA_social_conservatism_ADJ:0 "British Central African "
+ BCA_social_conservatism_DEF:0 "The Arabian Provinces"
+ BCA_authoritarian_government:0 "British Central Africa"
+ BCA_authoritarian_government_ADJ:0 "British Central African "
+ BCA_authoritarian_government_DEF:0 "British Central Africa" 
+ BCA_paternal_autocrat:0 "British Central Africa"
+ BCA_paternal_autocrat_ADJ:0 "British Central African "
+ BCA_paternal_autocrat_DEF:0 "British Central Africa"
+ BCA_radical_nationalism:0 "British Central Africa"
+ BCA_radical_nationalism_ADJ:0 "British Central African "
+ BCA_radical_nationalism_DEF:0 "British Central Africa"
+ 
+ BEG_communism:0 "British Egypt"
+ BEG_communism_ADJ:0 "British Egyptian "
+ BEG_communism_DEF:0 "British Egypt"
+ BEG_radical_socialism:0 "British Egypt"
+ BEG_radical_socialism_ADJ:0 "British Egyptian "
+ BEG_radical_socialism_DEF:0 "British Egypt"
+ BEG_social_democratic:0 "British Egypt"
+ BEG_social_democratic_ADJ:0 "British Egyptian "
+ BEG_social_democratic_DEF:0 "British Egypt"
+ BEG_market_liberalism:0 "British Egypt"
+ BEG_market_liberalism_ADJ:0 "British Egyptian "
+ BEG_market_liberalism_DEF:0 "British Egypta"
+ BEG_social_conservatism:0 "British Egypt"
+ BEG_social_conservatism_ADJ:0 "British Egyptian "
+ BEG_social_conservatism_DEF:0 "British Egypt"
+ BEG_authoritarian_government:0 "British Egypt"
+ BEG_authoritarian_government_ADJ:0 "British Egyptian "
+ BEG_authoritarian_government_DEF:0 "British Egypt" 
+ BEG_paternal_autocrat:0 "British Egypt"
+ BEG_paternal_autocrat_ADJ:0 "British Egyptian "
+ BEG_paternal_autocrat_DEF:0 "British Egypt"
+ BEG_radical_nationalism:0 "British Egypt"
+ BEG_radical_nationalism_ADJ:0 "British Egyptian "
+ BEG_radical_nationalism_DEF:0 "British Egypt"
+ 
  BNA_communism:0 "British North America"
  BNA_communism_ADJ:0 "American "
  BNA_communism_DEF:0 "British North America"
@@ -124,32 +174,7 @@
  BNA_radical_nationalism:0 "British North America"
  BNA_radical_nationalism_ADJ:0 "American "
  BNA_radical_nationalism_DEF:0 "British North America"
-  
- BUL_communism:0 "Socialist Republic of Bulgaria"
- BUL_communism_ADJ:0 "Bulgarian "
- BUL_communism_DEF:0 "The Socialist Republic of Bulgaria"
- BUL_radical_socialism:0 "Socialist Republic of Bulgaria"
- BUL_radical_socialism_ADJ:0 "Bulgarian "
- BUL_radical_socialism_DEF:0 "The Socialist Republic of Bulgaria"
- BUL_social_democratic:0 "Socialist Republic of Bulgaria"
- BUL_social_democratic_ADJ:0 "Bulgarian "
- BUL_social_democratic_DEF:0 "The Socialist Republic of Bulgaria"
- BUL_market_liberalism:0 "Republic of Bulgaria"
- BUL_market_liberalism_ADJ:0 "Bulgarian "
- BUL_market_liberalism_DEF:0 "Republic of Bulgaria"
- BUL_social_conservatism:0 "Republic of Bulgaria"
- BUL_social_conservatism_ADJ:0 "Bulgarian "
- BUL_social_conservatism_DEF:0 "Republic of Bulgaria"
- BUL_authoritarian_government:0 "Republic of Bulgaria"
- BUL_authoritarian_government_ADJ:0 "Bulgarian "
- BUL_authoritarian_government_DEF:0 "Republic of Bulgaria"
- BUL_paternal_autocrat:0 "Kingdom of Bulgaria"
- BUL_paternal_autocrat_ADJ:0 "Bulgarian "
- BUL_paternal_autocrat_DEF:0 "The Kingdom of Bulgaria"
- BUL_radical_nationalism:0 "Legionnaires Bulgaria"
- BUL_radical_nationalism_ADJ:0 "Bulgarian "
- BUL_radical_nationalism_DEF:0 "Legionnaires Bulgaria"
-  
+ 
  BRI_communism:0 "British Ireland"
  BRI_communism_ADJ:0 "Irish "
  BRI_communism_DEF:0 "British Ireland"
@@ -174,6 +199,57 @@
  BRI_radical_nationalism:0 "British Ireland"
  BRI_radical_nationalism_ADJ:0 "Irish "
  BRI_radical_nationalism_DEF:0 "British Ireland"
+ 
+ BUL_communism:0 "Socialist Republic of Bulgaria"
+ BUL_communism_ADJ:0 "Bulgarian "
+ BUL_communism_DEF:0 "The Socialist Republic of Bulgaria"
+ BUL_radical_socialism:0 "Socialist Republic of Bulgaria"
+ BUL_radical_socialism_ADJ:0 "Bulgarian "
+ BUL_radical_socialism_DEF:0 "The Socialist Republic of Bulgaria"
+ BUL_social_democratic:0 "Socialist Republic of Bulgaria"
+ BUL_social_democratic_ADJ:0 "Bulgarian "
+ BUL_social_democratic_DEF:0 "The Socialist Republic of Bulgaria"
+ BUL_market_liberalism:0 "Republic of Bulgaria"
+ BUL_market_liberalism_ADJ:0 "Bulgarian "
+ BUL_market_liberalism_DEF:0 "Republic of Bulgaria"
+ BUL_social_conservatism:0 "Republic of Bulgaria"
+ BUL_social_conservatism_ADJ:0 "Bulgarian "
+ BUL_social_conservatism_DEF:0 "Republic of Bulgaria"
+ BUL_authoritarian_government:0 "Republic of Bulgaria"
+ BUL_authoritarian_government_ADJ:0 "Bulgarian "
+ BUL_authoritarian_government_DEF:0 "Republic of Bulgaria"
+ BUL_paternal_autocrat:0 "Kingdom of Bulgaria"
+ BUL_paternal_autocrat_ADJ:0 "Bulgarian "
+ BUL_paternal_autocrat_DEF:0 "The Kingdom of Bulgaria"
+ BUL_radical_nationalism:0 "Legionnaires Bulgaria"
+ BUL_radical_nationalism_ADJ:0 "Bulgarian "
+ BUL_radical_nationalism_DEF:0 "Legionnaires Bulgaria"
+ 
+ BWA_communism:0 "British West Africa"
+ BWA_communism_ADJ:0 "British West African "
+ BWA_communism_DEF:0 "British West Africa"
+ BWA_radical_socialism:0 "British West Africa"
+ BWA_radical_socialism_ADJ:0 "British West African "
+ BWA_radical_socialism_DEF:0 "British West Africa"
+ BWA_social_democratic:0 "British West Africa"
+ BWA_social_democratic_ADJ:0 "British West African "
+ BWA_social_democratic_DEF:0 "British West Africa"
+ BWA_market_liberalism:0 "British West Africa"
+ BWA_market_liberalism_ADJ:0 "British West African "
+ BWA_market_liberalism_DEF:0 "British West Africa"
+ BWA_social_conservatism:0 "British West Africa"
+ BWA_social_conservatism_ADJ:0 "British West African "
+ BWA_social_conservatism_DEF:0 "British West Africa"
+ BWA_authoritarian_government:0 "British West Africa"
+ BWA_authoritarian_government_ADJ:0 "British West African "
+ BWA_authoritarian_government_DEF:0 "British West Africa"
+ BWA_paternal_autocrat:0 "British West Africa"
+ BWA_paternal_autocrat_ADJ:0 "British West African "
+ BWA_paternal_autocrat_DEF:0 "British Ireland"
+ BWA_radical_nationalism:0 "British West Africa"
+ BWA_radical_nationalism_ADJ:0 "British West African "
+ BWA_radical_nationalism_DEF:0 "British West Africa"
+ 
  
  CRO_communism:0 "Socialist Republic of Croatia"
  CRO_communism_ADJ:0 "Croatian "
