--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -266,7 +266,7 @@
  STATE_265:0 "Mikhaylovka"
  STATE_266:0 "Tehran"
  STATE_267:0 "Kabul"
- STATE_268:0 "French Somaliland"
+ STATE_268:1 "British Djibouti"
  STATE_269:0 "British Somaliland"
  STATE_270:0 "Pitcairn Island"
  STATE_271:0 "Ethiopia"
