--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,5 +1,30 @@
 ﻿l_english:
-  
+ 
+ AFG_communism:0 "Democratic Republic of Afghanistan"
+ AFG_communism_ADJ:0 "Afghan "
+ AFG_communism_DEF:0 "The Democratic Republic of Afghanistan"
+ AFG_radical_socialism:0 "Democratic Republic of Afghanistan"
+ AFG_radical_socialism_ADJ:0 "Afghan "
+ AFG_radical_socialism_DEF:0 "The Democratic Republic of Afghanistan"
+ AFG_social_democratic:0 "Democratic Republic of Afghanistan"
+ AFG_social_democratic_ADJ:0 "Afghan "
+ AFG_social_democratic_DEF:0 "The Democratic Republic of Afghanistan"
+ AFG_market_liberalism:0 "Republic of Afghanistan"
+ AFG_market_liberalism_ADJ:0 "Afghan "
+ AFG_market_liberalism_DEF:0 "The Republic of Afghanistan"
+ AFG_social_conservatism:0 "Republic of Afghanistan"
+ AFG_social_conservatism_ADJ:0 "Afghan "
+ AFG_social_conservatism_DEF:0 "The Republic of Afghanistan"
+ AFG_authoritarian_government:0 "Republic of Afghanistan"
+ AFG_authoritarian_government_ADJ:0 "Afghan "
+ AFG_authoritarian_government_DEF:0 "The Republic of Afghanistan"
+ AFG_paternal_autocrat:0 "Afghanistan State"
+ AFG_paternal_autocrat_ADJ:0 "Afghan "
+ AFG_paternal_autocrat_DEF:0 "The Afghanistan State"
+ AFG_radical_nationalism:0 "Afghanistan State"
+ AFG_radical_nationalism_ADJ:0 "Afghan"
+ AFG_radical_nationalism_DEF:0 "The Afghanistan State"  
+ 
  AST_communism:0 "Worker's Republic of Australia"
  AST_communism_ADJ:0 "Australian "
  AST_communism_DEF:0 "The Worker's Republic of Australia"
@@ -630,6 +655,81 @@
  NOR_radical_nationalism:0 "Norway"
  NOR_radical_nationalism_ADJ:0 "Norwegian "
  NOR_radical_nationalism_DEF:0 "Norway"
+  
+ PER_communism:0 "Iranian People's Republic"
+ PER_communism_ADJ:0 "Iranian "
+ PER_communism_DEF:0 "The Iranian People's Republic"
+ PER_radical_socialism:0 "Iranian People's Republic"
+ PER_radical_socialism_ADJ:0 "Iranian "
+ PER_radical_socialism_DEF:0 "The Iranian People's Republic"
+ PER_social_democratic:0 "Iranian People's Republic"
+ PER_social_democratic_ADJ:0 "Iranian "
+ PER_social_democratic_DEF:0 "The Iranian People's Republic"
+ PER_market_liberalism:0 "Republic of Iran"
+ PER_market_liberalism_ADJ:0 "Iranian "
+ PER_market_liberalism_DEF:0 "The Republic of Iran"
+ PER_social_conservatism:0 "Republic of Iran"
+ PER_social_conservatism_ADJ:0 "Iranian "
+ PER_social_conservatism_DEF:0 "The Republic of Iran"
+ PER_authoritarian_government:0 "Imperial State of Iran"
+ PER_authoritarian_government_ADJ:0 "Iranian "
+ PER_authoritarian_government_DEF:0 "The Imperial State of Iran"
+ PER_paternal_autocrat:0 "Imperial State of Iran"
+ PER_paternal_autocrat_ADJ:0 "Iranian "
+ PER_paternal_autocrat_DEF:0 "The Imperial State of Iran"
+ PER_radical_nationalism:0 "The Persian Empire"
+ PER_radical_nationalism_ADJ:0 "Persian "
+ PER_radical_nationalism_DEF:0 "Persian Empire" 
+
+ POL_communism:0 "Polish People's Republic"
+ POL_communism_ADJ:0 "Polish "
+ POL_communism_DEF:0 "The Polish People's Republic"
+ POL_radical_socialism:0 "Polish People's Republic"
+ POL_radical_socialism_ADJ:0 "Polish "
+ POL_radical_socialism_DEF:0 "The Polish People's Republic"
+ POL_social_democratic:0 "Polish Republic"
+ POL_social_democratic_ADJ:0 "Polish "
+ POL_social_democratic_DEF:0 "The Polish Republic"
+ POL_market_liberalism:0 "Polish Republic"
+ POL_market_liberalism_ADJ:0 "Polish "
+ POL_market_liberalism_DEF:0 "The Polish Republic"
+ POL_social_conservatism:0 "Polish Republic"
+ POL_social_conservatism_ADJ:0 "Polish "
+ POL_social_conservatism_DEF:0 "The Polish Republic"
+ POL_authoritarian_government:0 "Polish Republic"
+ POL_authoritarian_government_ADJ:0 "Polish "
+ POL_authoritarian_government_DEF:0 "The Polish Republic"
+ POL_paternal_autocrat:0 "Polish Republic"
+ POL_paternal_autocrat_ADJ:0 "Polish "
+ POL_paternal_autocrat_DEF:0 "The Polish Republic"
+ POL_radical_nationalism:0 "Falangist Poland"
+ POL_radical_nationalism_ADJ:0 "Polish "
+ POL_radical_nationalism_DEF:0 "Falangist Poland"
+  
+ POR_communism:0 "Portugese Union of Workers and Farmers"
+ POR_communism_ADJ:0 "Portuguese "
+ POR_communism_DEF:0 "The Portugese Union of Workers and Farmers"
+ POR_radical_socialism:0 "Portugese Union of Workers and Farmers"
+ POR_radical_socialism_ADJ:0 "Portuguese "
+ POR_radical_socialism_DEF:0 "The Portugese Union of Workers and Farmers"
+ POR_social_democratic:0 "Portugese Union of Workers and Farmers"
+ POR_social_democratic_ADJ:0 "Portuguese "
+ POR_social_democratic_DEF:0 "The Portugese Union of Workers and Farmers"
+ POR_market_liberalism:0 "Portuguese Republic"
+ POR_market_liberalism_ADJ:0 "Portuguese "
+ POR_market_liberalism_DEF:0 "The Portuguese Republic"
+ POR_social_conservatism:0 "Portuguese Republic"
+ POR_social_conservatism_ADJ:0 "Portuguese "
+ POR_social_conservatism_DEF:0 "The Portuguese Republic"
+ POR_authoritarian_government:0 "Portuguese Republic"
+ POR_authoritarian_government_ADJ:0 "Portuguese "
+ POR_authoritarian_government_DEF:0 "The Portuguese Republic"
+ POR_paternal_autocrat:0 "Portuguese Empire"
+ POR_paternal_autocrat_ADJ:0 "Portuguese "
+ POR_paternal_autocrat_DEF:0 "The Portuguese Empire"
+ POR_radical_nationalism:0 "Portuguese Empire"
+ POR_radical_nationalism_ADJ:0 "Portuguese "
+ POR_radical_nationalism_DEF:0 "The Portuguese Empire" 
  
  ROM_communism:0 "Romanian People's Republic"
  ROM_communism_ADJ:0 "Romanian "
@@ -872,7 +972,7 @@
  SWI_social_conservatism:0 "Switzerland"
  SWI_social_conservatism_ADJ:0 "Swiss "
  SWI_social_conservatism_DEF:0 "Switzerland"
- SWI_authoritarian_government:0 "The Swiss Interim Military Government"
+ SWI_authoritarian_government:0 "Swiss Interim Military Government"
  SWI_authoritarian_government_ADJ:0 "Swiss "
  SWI_authoritarian_government_DEF:0 "The Swiss Interim Military Government"
  SWI_paternal_autocrat:0 "Swiss Imperial Confederation"
@@ -882,56 +982,32 @@
  SWI_radical_nationalism_ADJ:0 "Swiss "
  SWI_radical_nationalism_DEF:0 "The Swiss Imperial Confederation"
  
- POL_communism:0 "Polish People's Republic"
- POL_communism_ADJ:0 "Polish "
- POL_communism_DEF:0 "The Polish People's Republic"
- POL_radical_socialism:0 "Polish People's Republic"
- POL_radical_socialism_ADJ:0 "Polish "
- POL_radical_socialism_DEF:0 "The Polish People's Republic"
- POL_social_democratic:0 "Polish Republic"
- POL_social_democratic_ADJ:0 "Polish "
- POL_social_democratic_DEF:0 "The Polish Republic"
- POL_market_liberalism:0 "Polish Republic"
- POL_market_liberalism_ADJ:0 "Polish "
- POL_market_liberalism_DEF:0 "The Polish Republic"
- POL_social_conservatism:0 "Polish Republic"
- POL_social_conservatism_ADJ:0 "Polish "
- POL_social_conservatism_DEF:0 "The Polish Republic"
- POL_authoritarian_government:0 "Polish Republic"
- POL_authoritarian_government_ADJ:0 "Polish "
- POL_authoritarian_government_DEF:0 "The Polish Republic"
- POL_paternal_autocrat:0 "Polish Republic"
- POL_paternal_autocrat_ADJ:0 "Polish "
- POL_paternal_autocrat_DEF:0 "The Polish Republic"
- POL_radical_nationalism:0 "Falangist Poland"
- POL_radical_nationalism_ADJ:0 "Polish "
- POL_radical_nationalism_DEF:0 "Falangist Poland"
-  
- POR_communism:0 "Portugese Union of Workers and Farmers"
- POR_communism_ADJ:0 "Portuguese "
- POR_communism_DEF:0 "The Portugese Union of Workers and Farmers"
- POR_radical_socialism:0 "Portugese Union of Workers and Farmers"
- POR_radical_socialism_ADJ:0 "Portuguese "
- POR_radical_socialism_DEF:0 "The Portugese Union of Workers and Farmers"
- POR_social_democratic:0 "Portugese Union of Workers and Farmers"
- POR_social_democratic_ADJ:0 "Portuguese "
- POR_social_democratic_DEF:0 "The Portugese Union of Workers and Farmers"
- POR_market_liberalism:0 "Portuguese Republic"
- POR_market_liberalism_ADJ:0 "Portuguese "
- POR_market_liberalism_DEF:0 "The Portuguese Republic"
- POR_social_conservatism:0 "Portuguese Republic"
- POR_social_conservatism_ADJ:0 "Portuguese "
- POR_social_conservatism_DEF:0 "The Portuguese Republic"
- POR_authoritarian_government:0 "Portuguese Republic"
- POR_authoritarian_government_ADJ:0 "Portuguese "
- POR_authoritarian_government_DEF:0 "The Portuguese Republic"
- POR_paternal_autocrat:0 "Portuguese Empire"
- POR_paternal_autocrat_ADJ:0 "Portuguese "
- POR_paternal_autocrat_DEF:0 "The Portuguese Empire"
- POR_radical_nationalism:0 "Portuguese Empire"
- POR_radical_nationalism_ADJ:0 "Portuguese "
- POR_radical_nationalism_DEF:0 "The Portuguese Empire"
+ TUR_communism:0 "Turkish Worker's and Farmer's Republic"
+ TUR_communism_ADJ:0 "Turkish"
+ TUR_communism_DEF:0 "The Turkish Worker's and Farmer's Republic"
+ TUR_radical_socialism:0 "Turkish Worker's and Farmer's Republic"
+ TUR_radical_socialism_ADJ:0 "Turkish "
+ TUR_radical_socialism_DEF:0 "The Turkish Worker's and Farmer's Republic"
+ TUR_social_democratic:0 "Republic of Turkey"
+ TUR_social_democratic_ADJ:0 "Turkish "
+ TUR_social_democratic_DEF:0 "The Republic of Turkey"
+ TUR_market_liberalism:0 "Republic of Turkey"
+ TUR_market_liberalism_ADJ:0 "Turkish "
+ TUR_market_liberalism_DEF:0 "The Republic of Turkey"
+ TUR_social_conservatism:0 "Republic of Turkey"
+ TUR_social_conservatism_ADJ:0 "Turkish "
+ TUR_social_conservatism_DEF:0 "The Republic of Turkey"
+ TUR_authoritarian_government:0 "Republic of Turkey"
+ TUR_authoritarian_government_ADJ:0 "Turkish "
+ TUR_authoritarian_government_DEF:0 "The Republic of Turkey"
+ TUR_paternal_autocrat:0 "Republic of Turkey"
+ TUR_paternal_autocrat_ADJ:0 "Turkish "
+ TUR_paternal_autocrat_DEF:0 "The Republic of Turkey"
+ TUR_radical_nationalism:0 "Turkish State"
+ TUR_radical_nationalism_ADJ:0 "Turkish "
+ TUR_radical_nationalism_DEF:0 "The Turkish State" 
  
+
  UNI_communism:0 "United Socialist Provinces"
  UNI_communism_ADJ:0 "Flemish "
  UNI_communism_DEF:0 "The United Socialist Provinces"
@@ -987,42 +1063,6 @@
  
  
  
- LUX_fascism:0 "Luxembourg"
- LUX_fascism_DEF:0 "Luxembourg"
- LUX_democratic:0 "Luxembourg"
- LUX_democratic_DEF:0 "Luxembourg"
- LUX_neutrality:0 "Royalist Luxembourg"
- LUX_neutrality_DEF:0 "Royalist Luxembourg"
- LUX_communism:0 "Rosa Luxembourg"
- LUX_communism_DEF:0 "Rosa Luxembourg"
- LUX_fascism_ADJ:0 "Luxembourg"
- LUX_democratic_ADJ:0 "Luxembourg"
- LUX_neutrality_ADJ:0 "Luxembourg"
- LUX_communism_ADJ:0 "Luxembourg"
- BEL_fascism:0 "Rexist Belgium"
- BEL_fascism_DEF:0 "Rexist Belgium"
- BEL_democratic:0 "Belgium"
- BEL_democratic_DEF:0 "Belgium"
- BEL_neutrality:0 "Leopoldian Belgium"
- BEL_neutrality_DEF:0 "Leopoldian Belgium"
- BEL_communism:0 "Co-operative of Belgium"
- BEL_communism_DEF:0 "The Co-operative of Belgium"
- BEL_fascism_ADJ:0 "Belgian"
- BEL_democratic_ADJ:0 "Belgian"
- BEL_neutrality_ADJ:0 "Belgian"
- BEL_communism_ADJ:0 "Belgian"
- HOL_fascism:0 "Dutch Rijk"
- HOL_fascism_DEF:0 "Dutch Rijk"
- HOL_democratic:0 "Netherlands"
- HOL_democratic_DEF:0 "The Netherlands"
- HOL_neutrality:0 "Kingdom of Netherlands"
- HOL_neutrality_DEF:0 "The Kingdom of Netherlands"
- HOL_communism:0 "People's United Provinces"
- HOL_communism_DEF:0 "The People's United Provinces"
- HOL_fascism_ADJ:0 "Dutch"
- HOL_democratic_ADJ:0 "Dutch"
- HOL_neutrality_ADJ:0 "Dutch"
- HOL_communism_ADJ:0 "Dutch"
 
 
  LIT_fascism:0 "Iron Wolf Lithuania"
@@ -1074,18 +1114,7 @@
  YUG_neutrality_ADJ:0 "Yugoslavian"
  YUG_communism_ADJ:0 "Yugoslavian"
 
- TUR_fascism:0 "Neo-Ottoman Empire"
- TUR_fascism_DEF:0 "The Neo-Ottoman Empire"
- TUR_democratic:0 "Republic of Turkey"
- TUR_democratic_DEF:0 "The Republic of Turkey"
- TUR_neutrality:0 "Turkey"
- TUR_neutrality_DEF:0 "Turkey"
- TUR_communism:0 "Turkish Socialist Republic"
- TUR_communism_DEF:0 "The Turkish Socialist Republic"
- TUR_fascism_ADJ:0 "Turkish"
- TUR_democratic_ADJ:0 "Turkish"
- TUR_neutrality_ADJ:0 "Turkish"
- TUR_communism_ADJ:0 "Turkish"
+ 
  ALB_fascism:0 "Greater Albania"
  ALB_fascism_DEF:0 "Greater Albania"
  ALB_democratic:0 "Republic of Albania"
@@ -1100,18 +1129,6 @@
  ALB_communism_ADJ:0 "Albanian"
 
 
- AFG_fascism:0 "New Afghan Khanate"
- AFG_fascism_DEF:0 "The New Afghan Khanate"
- AFG_democratic:0 "Republic of Afghanistan"
- AFG_democratic_DEF:0 "The Republic of Afghanistan"
- AFG_neutrality:0 "Afghanistan"
- AFG_neutrality_DEF:0 "Afghanistan"
- AFG_communism:0 "Democratic Republic of Afghanistan"
- AFG_communism_DEF:0 "The Democratic Republic of Afghanistan"
- AFG_fascism_ADJ:0 "Afghan"
- AFG_democratic_ADJ:0 "Afghan"
- AFG_neutrality_ADJ:0 "Afghan"
- AFG_communism_ADJ:0 "Afghan"
  ARG_fascism:0 "Argentine League"
  ARG_fascism_DEF:0 "The Argentine League"
  ARG_democratic:0 "Argentine Republic"
@@ -1342,18 +1359,7 @@
  PAR_democratic_ADJ:0 "Paraguayan"
  PAR_neutrality_ADJ:0 "Paraguayan"
  PAR_communism_ADJ:0 "Paraguayan"
- PER_fascism:0 "New Persian Empire"
- PER_fascism_DEF:0 "The New Persian Empire"
- PER_democratic:0 "Republic of Iran"
- PER_democratic_DEF:0 "The Republic of Iran"
- PER_neutrality:0 "Iran"
- PER_neutrality_DEF:0 "Iran"
- PER_communism:0 "Iranian Communist Authority"
- PER_communism_DEF:0 "The Iranian Communist Authority"
- PER_fascism_ADJ:0 "Iranian"
- PER_democratic_ADJ:0 "Iranian"
- PER_neutrality_ADJ:0 "Iranian"
- PER_communism_ADJ:0 "Iranian"
+
  PHI_fascism:0 "Ganap Philippines"
  PHI_fascism_DEF:0 "Ganap Philippines"
  PHI_democratic:0 "Philippines"
