--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -717,7 +717,79 @@
  BWA_paternal_autocrat_party:0 "PAP"
  BWA_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
  BWA_radical_nationalism_party:0 "RNP"
- BWA_radical_nationalism_party_long:0 "Radical Nationalist Party"  
+ BWA_radical_nationalism_party_long:0 "Radical Nationalist Party"
+
+ #Caucasian Federation
+ CAU_communism_party:0 "CP"
+ CAU_communism_party_long:0 "Communist Party"
+ CAU_radical_socialism_party:0 "RSP"
+ CAU_radical_socialism_party_long:0 "Radical Socialist Party"
+ CAU_social_democratic_party:0 "SDP"
+ CAU_social_democratic_party_long:0 "Social Democratic Party"
+ CAU_market_liberalism_party:0 "MLP"
+ CAU_market_liberalism_party_long:0 "Market Liberal Party"
+ CAU_social_conservatism_party:0 "SCP"
+ CAU_social_conservatism_party_long:0 "Social Conservative Party"
+ CAU_authoritarian_government_party:0 "CG"
+ CAU_authoritarian_government_party_long:0 "Colonial Government"
+ CAU_paternal_autocrat_party:0 "PAP"
+ CAU_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ CAU_radical_nationalism_party:0 "RNP"
+ CAU_radical_nationalism_party_long:0 "Radical Nationalist Party"   
+ 
+ #Turkey
+ TUR_communism_party:0 "CP"
+ TUR_communism_party_long:0 "Communist Party"
+ TUR_radical_socialism_party:0 "RSP"
+ TUR_radical_socialism_party_long:0 "Radical Socialist Party"
+ TUR_social_democratic_party:0 "SDP"
+ TUR_social_democratic_party_long:0 "Social Democratic Party"
+ TUR_market_liberalism_party:0 "MLP"
+ TUR_market_liberalism_party_long:0 "Market Liberal Party"
+ TUR_social_conservatism_party:0 "SCP"
+ TUR_social_conservatism_party_long:0 "Social Conservative Party"
+ TUR_authoritarian_government_party:0 "CG"
+ TUR_authoritarian_government_party_long:0 "Colonial Government"
+ TUR_paternal_autocrat_party:0 "PAP"
+ TUR_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ TUR_radical_nationalism_party:0 "RNP"
+ TUR_radical_nationalism_party_long:0 "Radical Nationalist Party"  
+ 
+ #Persia
+ PER_communism_party:0 "CP"
+ PER_communism_party_long:0 "Communist Party"
+ PER_radical_socialism_party:0 "RSP"
+ PER_radical_socialism_party_long:0 "Radical Socialist Party"
+ PER_social_democratic_party:0 "SDP"
+ PER_social_democratic_party_long:0 "Social Democratic Party"
+ PER_market_liberalism_party:0 "MLP"
+ PER_market_liberalism_party_long:0 "Market Liberal Party"
+ PER_social_conservatism_party:0 "SCP"
+ PER_social_conservatism_party_long:0 "Social Conservative Party"
+ PER_authoritarian_government_party:0 "CG"
+ PER_authoritarian_government_party_long:0 "Colonial Government"
+ PER_paternal_autocrat_party:0 "PAP"
+ PER_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ PER_radical_nationalism_party:0 "RNP"
+ PER_radical_nationalism_party_long:0 "Radical Nationalist Party"  
+
+ #Afghanistan
+ AFG_communism_party:0 "CP"
+ AFG_communism_party_long:0 "Communist Party"
+ AFG_radical_socialism_party:0 "RSP"
+ AFG_radical_socialism_party_long:0 "Radical Socialist Party"
+ AFG_social_democratic_party:0 "SDP"
+ AFG_social_democratic_party_long:0 "Social Democratic Party"
+ AFG_market_liberalism_party:0 "MLP"
+ AFG_market_liberalism_party_long:0 "Market Liberal Party"
+ AFG_social_conservatism_party:0 "SCP"
+ AFG_social_conservatism_party_long:0 "Social Conservative Party"
+ AFG_authoritarian_government_party:0 "CG"
+ AFG_authoritarian_government_party_long:0 "Colonial Government"
+ AFG_paternal_autocrat_party:0 "PAP"
+ AFG_paternal_autocrat_party_long:0 "Paternal Autocrat Party"
+ AFG_radical_nationalism_party:0 "RNP"
+ AFG_radical_nationalism_party_long:0 "Radical Nationalist Party"  
  
  
  CHI_communism_party:0 "CPC"
@@ -898,8 +970,6 @@
  PRU_fascism_party_long:0 "Constituent Assembly"
  PRU_communism_party:0 "PCP"
  PRU_communism_party_long:0 "Partido Comunista del Perú"
- AFG_neutrality_party:0 "Barakzai"
- AFG_neutrality_party_long:0 "Barakzai royal family"
  LUX_democratic_party:0 "Rietspartei"
  LUX_communism_party:0 "KPL"
  LUX_communism_party_long:0 "Kommunistesch Partei Lëtzebuerg"
